--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <div class="form-group">
         <select name="task-type" class="select-dropdown">
           <option value="" disabled selected>Pick a task type</option>
-          <option value="Print">Personal</option>
-          <option value="Web">Shopping</option>
-          <option value="Mobile">School</option>
+          <option value="Personal">Personal</option>
+          <option value="Shopping">Shopping</option>
+          <option value="School">School</option>
         </select>
       </div>
       <div class="form-group">
